vars in a ansible play must be a dictionary
Signed-off-by: YuxuanLiuTier4Desktop <619684051@qq.com>

--- a/ansible/setup.yaml
+++ b/ansible/setup.yaml
@@ -1,18 +1,18 @@
 - name: Setup perception ECU
   hosts: localhost
   vars:
-    - ros_distro: humble
-    - network_config:
-        ros:
-          interface_address: 192.168.2.2
-          interface_name: eqos0
-        dhcp:
-          interface_name: mgbe1
-        lidar:
-          interface_address: 192.168.1.100
-          interface_name: eth0
-    - ptp4l_client_interface: eqos0
-    - ptp4l_host_interface: eth0
+    ros_distro: humble
+    network_config:
+      ros:
+        interface_address: 192.168.2.2
+        interface_name: eqos0
+      dhcp:
+        interface_name: mgbe1
+      lidar:
+        interface_address: 192.168.1.100
+        interface_name: eth0
+    ptp4l_client_interface: eqos0
+    ptp4l_host_interface: eth0
   vars_prompt:
     - name: prompt_configure_network
       prompt: |-
