--- a/ansible/roles/perception_application/defaults/main.yaml
+++ b/ansible/roles/perception_application/defaults/main.yaml
@@ -1,4 +1,5 @@
 perception_application_base_path: /home/autoware
+perception_application_directory_name: edge-auto-jetson
 perception_application_edge_auto_repo : git@github.com:tier4/edge-auto-jetson.xx1_gen2.0.git
 # perception_application_edge_auto_repo : git@github.com:tier4/edge-auto-jetson.x2.git
 perception_application_edge_auto_version: beta/v0.48
