--- a/ansible/roles/perception_application/tasks/build_edge_auto_jetson.yaml
+++ b/ansible/roles/perception_application/tasks/build_edge_auto_jetson.yaml
@@ -7,20 +7,20 @@
 
 - name: Clone edge-auto-jetson repository
   ansible.builtin.git:
-    repo: git@github.com:tier4/edge-auto-jetson.xx1_gen2.0.git
-    dest: "{{ perception_application_base_path }}/edge-auto-jetson"
+    repo: "{{ perception_application_edge_auto_repo }}"
+    dest: "{{ perception_application_base_path }}/{{ perception_application_directory_name }}"
     version: "{{ perception_application_edge_auto_version }}"
 
 - name: Create src directory
   ansible.builtin.file:
-    path: "{{ perception_application_base_path }}/edge-auto-jetson/src"
+    path: "{{ perception_application_base_path }}/{{ perception_application_directory_name }}/src"
     state: directory
     mode: "0755"
 
 - name: Import VCS repositories
   ansible.builtin.shell:
     cmd: vcs import src < autoware.repos
-    chdir: "{{ perception_application_base_path }}/edge-auto-jetson"
+    chdir: "{{ perception_application_base_path }}/{{ perception_application_directory_name }}"
   changed_when: false
 
 - name: Upgrade pyOpenSSL using pip
@@ -45,6 +45,6 @@
 - name: Build Edge Auto Jetson package
   ansible.builtin.shell:
     cmd: source {{ perception_application_ros_source_path }} && ./build.sh {{ perception_type }}
-    chdir: "{{ perception_application_base_path }}/edge-auto-jetson"
+    chdir: "{{ perception_application_base_path }}/{{ perception_application_directory_name }}"
     executable: /bin/bash
   changed_when: false
