feat: sensor fusion kit v2 (#70)
* fix: Update python3.6 -> python3.10

* feat: Add cgroups role

* fix: Set ptp4l_client_interface to eqos0

* feat: Add ptp4l_host role

* fix: Change ros2 role name to ros2_source

* feat: Add ros2 role from edge-auto

* feat: Add cgroups role option to setup.yaml

* feat: Add ptp4l_host role option to setup.yaml

* feat: Remove unnecessary roles from setup.yaml

* fix: Fix rosdistro variable name in setup.yaml

* fix: Add noninteractive environment to setup.yaml

* fix: Update autoware universe repo for TRT fix

* setup.yaml: Update Anvil interfaces

* setup-dev-env.sh: Fix typo

* Enable tier4 camera driver

* Add temporary role for installing T4 driver

* [tier4_anvil_c2] Enable all overlays on boot menu

* [ros2] Install colcon and rmw-cyclonedds-cpp

* Add nebula

* Set the data_dir for autoware

* Add nebula deps

* Update autoware

* Remove cmake_modules from autoware.repos

* Add edge_auto_launch as x86_launcher

* ros2: Install rosdep

* chore(repos): update repos file to run full perception on anvil

Signed-off-by: Yuri Guimaraes <yuri.kgpps@gmail.com>

* style(pre-commit): autofix

* fix ansible/roles/tier4_anvil_c2/defaults/main.yml

* Remove unnecessary double quotes

* fix yaml format (ansible/roles/tier4_anvil_c2)

---------

Signed-off-by: Yuri Guimaraes <yuri.kgpps@gmail.com>
Co-authored-by: Yuri Guimaraes <yuri.kgpps@gmail.com>
Co-authored-by: tetsuya-t4 <tetsuya.yamamoto@tier4.jp>
Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/ansible/setup.yaml
+++ b/ansible/setup.yaml
@@ -1,25 +1,37 @@
 - name: Setup perception ECU
   hosts: localhost
   vars:
-    - ros_distro: humble
+    - rosdistro: humble
     - network_config:
         ros:
           interface_address: 192.168.2.2
-          interface_name: eth1
+          interface_name: eqos0
         dhcp:
+          interface_name: mgbe1
+        lidar:
+          interface_address: 192.168.1.100
           interface_name: eth0
-    - ptp4l_client_interface: eth1
+    - ptp4l_client_interface: eqos0
+    - ptp4l_host_interface: eth0
+    - artifacts_script_download_dir: /home/autoware/autoware_data
   vars_prompt:
-    - name: prompt_install_camera_driver
-      prompt: |-
-        [Warning] Do you want to install/update the TIER IV camera driver? [y/N]
-      private: false
     - name: prompt_configure_network
       prompt: |-
         [Warning] Do you want to configure the network? This configuration may overwrite the IP address of the specific network interface [y/N]
       private: false
+    - name: prompt_configure_user_resources
+      prompt: |-
+        [Warning] Do you want to configure user resources? Only necessary if CONFIG_RT_GROUP_SCHED is enabled [y/N]
+    - name: prompt_configure_t4_driver
+      prompt: |-
+        [Warning] Do you want to configure the TierIV drivers? [y/N]
+    - name: prompt_use_local_c2_driver
+      prompt: |-
+        [Warning] Do you want to use a local C2 driver? [y/N]
   roles:
     - role: artifacts
+    - role: cgroups
+      when: prompt_configure_user_resources == 'y'
     - role: ptp4l_client
       when: prompt_configure_network == 'y'
     - role: enlarge_txqueue
@@ -29,9 +41,12 @@
     - role: autoware
     - role: cuda
     - role: cyclonedds
-    - role: docker
     - role: vcstool
-    - role: calibration_tools
-    - role: tier4_hdr_camera_driver
-      when: prompt_install_camera_driver == 'y'
     - role: ros2
+    - role: tier4_hdr_camera_driver
+      when: prompt_configure_t4_driver == 'y' and not prompt_use_local_c2_driver == 'y'
+    - role: tier4_anvil_c2
+      when: prompt_configure_t4_driver == 'y' and prompt_use_local_c2_driver == 'y'
+
+  environment:
+    DEBIAN_FRONTEND: noninteractive
