--- a/ansible/roles/tier4_hdr_camera_driver/tasks/main.yaml
+++ b/ansible/roles/tier4_hdr_camera_driver/tasks/main.yaml
@@ -96,7 +96,7 @@
     check_mode: true
     changed_when: false
     register: does_exist
-    when default_entry is defined
+    when: default_entry is defined
     become: true
 
   - name: Modify
