--- a/ansible/roles/ros2/tasks/main.yaml
+++ b/ansible/roles/ros2/tasks/main.yaml
@@ -56,83 +56,74 @@
         dest: "{{ ros2_build_script }}"
         mode: u+x
 
-# - name: Install OpenCV build dependencies
-#   hosts: localhost
-#   become: true # sudo 権限が必要
-
-#   tasks:
-#     - name: Update apt cache
-#       apt:
-#         update_cache: yes
-
-- name: Install OpenCV build dependencies
-  apt:
-    name:
-      - build-essential
-      - gfortran
-      - cmake
-      - git
-      - file
-      - tar
-      - libatlas-base-dev
-      - libavcodec-dev
-      - libavformat-dev
-      - ffmpeg # libavresample-devの代替
-      - libcanberra-gtk3-module
-      - libeigen3-dev
-      - libglew-dev
-      - libgstreamer-plugins-base1.0-dev
-      - libgstreamer-plugins-good1.0-dev
-      - libgstreamer1.0-dev
-      - libgtk-3-dev
-      - libjpeg-dev
-      - libjpeg8-dev
-      - libjpeg-turbo8-dev
-      - liblapack-dev
-      - liblapacke-dev
-      - libopenblas-dev
-      - libpng-dev
-      - libpostproc-dev
-      - libswscale-dev
-      - libtbb-dev
-      - libtbb2
-      - libtesseract-dev
-      - libtiff-dev
-      - libv4l-dev
-      - libxine2-dev
-      - libxvidcore-dev
-      - libx264-dev
-      - libgtkglext1
-      - libgtkglext1-dev
-      - pkg-config
-      - qv4l2
-      - v4l-utils
-      - zlib1g-dev
-    state: present
-    install_recommends: no
-  ignore_errors: yes # ignore error when not found libdc1394-22-dev
-
 - name: Check architecture
   shell: uname -i
   register: arch
 
-- name: Install Python3 dev packages (aarch64 only)
-  apt:
-    name:
-      - python3-pip
-      - python3-dev
-      - python3-numpy
-      - python3-distutils
-      - python3-setuptools
-    state: present
-    install_recommends: no
-  when: arch.stdout != "x86_64"
 
 - name: Install dependencies
   block:
     # - name: Install OpenCV deps
     #   ansible.builtin.command:
     #     cmd: "{{ opencv_install_deps_script }}"
+    - name: Install OpenCV deps
+      ansible.builtin.apt:
+        name:
+          - build-essential
+          - gfortran
+          - cmake
+          - git
+          - file
+          - tar
+          - libatlas-base-dev
+          - libavcodec-dev
+          - libavformat-dev
+          - ffmpeg # libavresample-devの代替
+          - libcanberra-gtk3-module
+          - libeigen3-dev
+          - libglew-dev
+          - libgstreamer-plugins-base1.0-dev
+          - libgstreamer-plugins-good1.0-dev
+          - libgstreamer1.0-dev
+          - libgtk-3-dev
+          - libjpeg-dev
+          - libjpeg8-dev
+          - libjpeg-turbo8-dev
+          - liblapack-dev
+          - liblapacke-dev
+          - libopenblas-dev
+          - libpng-dev
+          - libpostproc-dev
+          - libswscale-dev
+          - libtbb-dev
+          - libtbb2
+          - libtesseract-dev
+          - libtiff-dev
+          - libv4l-dev
+          - libxine2-dev
+          - libxvidcore-dev
+          - libx264-dev
+          - libgtkglext1
+          - libgtkglext1-dev
+          - pkg-config
+          - qv4l2
+          - v4l-utils
+          - zlib1g-dev
+
+        install_recommends: false
+        update_cache: true
+
+    - name: Install Python3 dev packages (aarch64 only)
+      apt:
+        name:
+          - python3-pip
+          - python3-dev
+          - python3-numpy
+          - python3-distutils
+          - python3-setuptools
+        install_recommends: false
+        update_cache: true
+
     - name: Install PCL deps
       ansible.builtin.apt:
         name:
