--- a/ansible/roles/ros2/tasks/main.yaml
+++ b/ansible/roles/ros2/tasks/main.yaml
@@ -132,9 +132,14 @@
       become: true
 
 - name: Install OpenCV
-  ansible.builtin.command:
-    cmd: "{{ opencv_install_script }} https://nvidia.box.com/shared/static/ngp26xb9hb7dqbu6pbs7cs9flztmqwg0.gz OpenCV-4.8.1-aarch64.tar.gz"
+  ansible.builtin.shell:
+    cmd: "{{ opencv_install_script }}"
     chdir: "{{ jetson_script_dir }}"
+  environment:
+    OPENCV_URL: "https://nvidia.box.com/shared/static/ngp26xb9hb7dqbu6pbs7cs9flztmqwg0.gz"
+    OPENCV_VERSION: "4.8.1"
+    TAR_INDEX_URL: "{{ opencv_url_base | default('') }}"
+    OPENCV_DEB: "OpenCV-4.8.1-aarch64.tar.gz"
   become: true
 
 - name: Install range-v3 0.11.0
