--- a/ansible/roles/ros2/tasks/main.yaml
+++ b/ansible/roles/ros2/tasks/main.yaml
@@ -233,6 +233,7 @@
           - git
           - libbullet-dev
           - libpython3-dev
+          - python3-colcon-common-extensions
           - python3-flake8
           - python3-pip
           - python3-numpy
@@ -255,7 +256,6 @@
     - name: Install pip packages
       ansible.builtin.pip:
         name:
-          - colcon-common-extensions
           - argcomplete
           - flake8-blind-except
           - flake8-builtins
@@ -278,14 +278,14 @@
           - empy==3.3.4
         extra_args: --no-cache-dir
       become: true
-    # - name: Could NOT find Python3 workaround
-    #   ansible.builtin.apt:
-    #     name:
-    #       - python3.9
-    #       - libpython3.9*
-    #     purge: true
-    #     state: absent
-    #   become: true
+    - name: Could NOT find Python3 workaround
+      ansible.builtin.apt:
+        name:
+          - python3.9
+          - libpython3.9*
+        purge: true
+        state: absent
+      become: true
     - name: Create the ROS root directory and src directory
       ansible.builtin.file:
         path: "{{ ros_root_dir }}/src"
