fix: add opencv_python version

--- a/ansible/roles/ros2/tasks/main.yaml
+++ b/ansible/roles/ros2/tasks/main.yaml
@@ -146,6 +146,7 @@
   set_fact:
     opencv_version: "{{ OPENCV_VERSION | default('4.9.0') }}"
     opencv_url: "{{ OPENCV_URL }}"
+    opencv_python: "{{ OPENCV_PYTHON | default('4.x') }}"
     force_build: "{{ FORCE_BUILD | default('on') }}"
     cuda_arch_bin: "{{ CUDA_ARCH_BIN | default('') }}"
 
@@ -156,6 +157,7 @@
         cmd: cd {{ jetson_script_dir }} && ./opencv_build.sh || echo "BUILD FAILED (OpenCV ${OPENCV_VERSION})"
       environment:
         OPENCV_VERSION: "{{ opencv_version }}"
+        OPENCV_PYTHON: "{{ opencv_python }}"
         OPENCV_URL: "{{ opencv_url }}"
         FORCE_BUILD: "{{ force_build }}"
         CUDA_ARCH_BIN: "{{ cuda_arch_bin }}"
